@@ -3,5 +3,6 @@ Sequence: 6000
 Version: 1.0
 Description: Test tags related to the init.d checks
 Test-For:
-  init.d-script-does-not-implement-required-option
-  init.d-script-uses-usr-interpreter
+ init.d-script-does-not-implement-required-option
+ init.d-script-sourcing-without-test
+ init.d-script-uses-usr-interpreter
