@@ -1,2 +1,3 @@
 foo.in /etc/init.d/
 README /etc/init.d/
+skeleton /etc/init.d/
