@@ -6,4 +6,5 @@
 binary:
 	dh $@ --until dh_fixperms
 	chmod -x debian/init.d-script-registration/etc/init.d/README
+	chmod -x debian/init.d-script-registration/etc/init.d/skeleton
 	dh $@ --remaining
