@@ -2,4 +2,6 @@ Testname: init.d-script-registration
 Sequence: 6000
 Version: 1.0
 Description: Test tags related to the registration of init scripts
-Test-For: init.d-script-missing-lsb-section
+Test-For:
+ init.d-script-missing-lsb-section
+ script-in-etc-init.d-not-registered-via-update-rc.d
